# echo-app-py-uv

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: pyproject.toml
app/echo_app/: main.py
core/: pyproject.toml
core/echo_core/: __init__.py
