[project]
name = "echo-app-py-uv"
version = "0.1.0"
description = "Base project for the echo app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["core", "app"]

[tool.uv.sources]
core = { workspace = true }
app  = { workspace = true }

[dependency-groups]
dev = [
    "pylint>=3.3.6",
]
